Simplify CRUD API to read and create only
